# hello-rocket

./: Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  models.rs  schema.rs
