[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.65"
rocket_contrib = "0.4.10"
